# workflow-diagram-agent

./: .gitignore  index.html  pyproject.toml
api/: generate.py  index.py
src/workflow_diagram_agent/: __init__.py  cli.py  generator.py
tests/: test_generator.py
